<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zivid_camera</name>
  <version>1.0.0</version>
  <description>Driver for using the Zivid 3D cameras in ROS.</description>
  <maintainer email="support@zivid.com">Zivid</maintainer>
  <license>BSD3</license>
  <url type="website>">https://zivid.com</url>
  <url type="repository">https://github.com/zivid/zivid-ros</url>
  <url type="bugtracker">https://github.com/zivid/zivid-ros/issues</url>
  <author email="support@zivid.com">Zivid</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp_components</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>image_transport</depend>
  <depend>builtin_interfaces</depend>
  <depend>rosidl_default_generators</depend>
  <depend>zivid_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
