<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>zivid_conversions</name>
  <version>0.0.0</version>
  <description>Provides conversions from Zivid data types to ROS2 message types</description>
  <maintainer email="lars.tingelstad@ntnu.no">lars</maintainer>
  <license>BSD3</license>

  <license>BSD3</license>
  <url type="website>">https://zivid.com</url>
  <url type="repository">https://github.com/zivid/zivid-ros</url>
  <url type="bugtracker">https://github.com/zivid/zivid-ros/issues</url>
  <author email="support@zivid.com">Zivid</author>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
