<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zivid_samples</name>
  <version>1.0.0</version>
  <description>Contains C++ and Python samples demonstrating
  use of the zivid_camera package.</description>
  <maintainer email="support@zivid.com">Zivid</maintainer>
  <license>BSD3</license>
  <url type="website>">https://zivid.com</url>
  <url type="repository">https://github.com/zivid/zivid-ros</url>
  <url type="bugtracker">https://github.com/zivid/zivid-ros/issues</url>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>lifecycle_msgs</exec_depend>
  <exec_depend>zivid_interfaces</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
